[tool.poetry]
name = "mqtt-logger"
version = "0.1.0"
description = "MQTT Logger"
authors = ["Tyler Matteson <tyler@agritheory.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiomqtt = {git = "https://github.com/empicano/aiomqtt.git"}
cryptography = "^43.0.3"
databases = {extras = ["asyncpg"], version = "^0.9.0"}
pyjwt = "^2.9.0"
environs = "^11.0.0"
quart = "^0.19.8"
quart-auth = "^0.10.1"
quart-cors = "^0.7.0"
strawberry-graphql = {extras = ["debug-server"], version = "^0.247.1"}
uvicorn = "^0.32.0"
httpx = "^0.27.2"

[tool.poetry.scripts]
start = "src.server:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "\t"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"